--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FieldMaxProUI</string>
+    <string name="welcome">Welcome!</string>
+    <string name="email_hint">email</string>
+    <string name="password">password</string>
+    <string name="login_text">Login</string>
 </resources>
